# Shadematica

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
src/: logger.cpp  logger.h  main.cpp
src/graphics/: renderer.cpp  renderer.h  shader.cpp  shader.h
src/graphics/shaders/: meow.frag
